Bug 42731 - Fix fast/css/last-child-style-sharing.html
Summary: Fix fast/css/last-child-style-sharing.html
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: 528+ (Nightly build)
Hardware: Other OS X 10.5
: P2 Normal
Assignee: Adam Barth
URL:
Keywords:
Depends on:
Blocks: 41123
  Show dependency treegraph
 
Reported: 2010-07-21 02:13 PDT by Adam Barth
Modified: 2010-07-21 05:05 PDT (History)
2 users (show)

See Also:


Attachments
Patch (3.73 KB, patch)
2010-07-21 02:16 PDT, Adam Barth
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Adam Barth 2010-07-21 02:13:41 PDT
Fix fast/css/last-child-style-sharing.html
Comment 1 Adam Barth 2010-07-21 02:16:39 PDT
Created attachment 62157 [details]
Patch
Comment 2 Eric Seidel (no email) 2010-07-21 04:46:04 PDT
Comment on attachment 62157 [details]
Patch

OK.  As a general comment, I don't think we have nearly enough EOF tests.  Lots of EOF cases in the spec which I believe are still notImplemented().
Comment 3 WebKit Commit Bot 2010-07-21 05:05:49 PDT
Comment on attachment 62157 [details]
Patch

Clearing flags on attachment: 62157

Committed r63812: <http://trac.webkit.org/changeset/63812>
Comment 4 WebKit Commit Bot 2010-07-21 05:05:54 PDT
All reviewed patches have been landed.  Closing bug.