WebCore/html/HTMLTreeBuilder.cpp
@@ -2615,8 +2615,8 @@ void HTMLTreeBuilder::processEndOfFile(AtomicHTMLToken& token)
     case InHeadNoscriptMode:
         ASSERT(insertionMode() == InHeadNoscriptMode);
         defaultForInHeadNoscript();
-        processToken(token);
-        break;
+        processEndOfFile(token);
+        return;
     case AfterFramesetMode:
     case AfterAfterFramesetMode:
         ASSERT(insertionMode() == AfterFramesetMode || insertionMode() == AfterAfterFramesetMode);
@@ -2640,7 +2640,7 @@ void HTMLTreeBuilder::processEndOfFile(AtomicHTMLToken& token)
             return;
         }
         processEndOfFile(token);
-        break;
+        return;
     case InForeignContentMode:
         parseError(token);
         // FIXME: Following the spec would infinitely recurse on <svg><svg>
@@ -2648,17 +2648,19 @@ void HTMLTreeBuilder::processEndOfFile(AtomicHTMLToken& token)
         m_tree.openElements()->popUntilElementWithNamespace(xhtmlNamespaceURI);
         setInsertionMode(m_secondaryInsertionMode);
         processEndOfFile(token);
-        break;
+        return;
     case InTableTextMode:
         defaultForInTableText();
         processEndOfFile(token);
-        break;
+        return;
     case TextMode:
     case InCaptionMode:
     case InRowMode:
         notImplemented();
         break;
     }
+    ASSERT(m_tree.openElements()->top());
+    m_tree.openElements()->popAll();
 }
 
 void HTMLTreeBuilder::defaultForInitial()
